--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <div class="weather-card">
-        <h2>🌤 ClimaTrack</h2>
-        <div class="search">
-            <input type="text" id="city" placeholder="Enter city name" />
-            <button id="search-btn">Search</button>
+    <div id="main-container">
+        <div class="weather-card">
+            <h2>🌤 ClimaTrack</h2>
+            <div class="search">
+                <input type="text" id="city" placeholder="Enter city name" />
+                <button id="search-btn">Search</button>
+            </div>
+            <div class="result" id="weatherResult"></div>
         </div>
-        <div class="result" id="weatherResult"></div>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="script.js"></script>
+    </div>
 </body>
 
 </html>
